--- a/src/styles/icons.scss
+++ b/src/styles/icons.scss
@@ -6,3 +6,6 @@ $image: "\f03e";
 // 360-image
 $goToScene: "\e907";
 $scene: "\e915";
+
+// H5PFontIcons
+$summary: "\e992";
